junaid's fixes in